--- a/src/content/pages/services/lawnscaping.html
+++ b/src/content/pages/services/lawnscaping.html
@@ -10,6 +10,95 @@ permalink: 'services/landscaping/'
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/services.css">
+    <script defer src="/assets/js/faq.js"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What landscaping services do you offer in Macomb, MI?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We offer mulching, hardscaping and rock installation, tree and shrub trimming, tree removal and stump grinding, sod installation and lawn replacement, and sprinkler system installation and maintenance. We handle everything from simple refreshes to full outdoor makeovers."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Why should I mulch my landscape beds?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Mulching is one of the fastest and most affordable ways to improve your property's appearance. Premium mulch reduces weeds, retains moisture in soil, and creates a crisp, polished look. We offer a variety of colors and materials to match your aesthetic."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is hardscaping and what does it include?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Hardscaping includes decorative stone borders, rock beds, walkways, and retaining walls. These durable features elevate your landscape while reducing long-term maintenance needs. We design and install hardscapes that complement your property."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you remove trees and grind stumps?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. Our team safely removes hazardous or unwanted trees and grinds stumps below ground level, allowing you to reclaim your yard and prepare for new landscaping projects."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How does sod installation work?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Sod installation provides an instant lawn transformation. We install high-quality sod that's perfect for damaged lawns, new construction, or homeowners wanting a fast, healthy, green yard without waiting for seed to grow."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you install and service sprinkler systems?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We're one of the few landscaping companies in Macomb specializing in irrigation. We handle new sprinkler installs, repairs, start-ups, and winter shut-downs. Systems winterized by our team are covered against freeze damage."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How much do landscaping services cost?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Pricing varies based on project size, materials, and scope of work. We provide fast, free estimates with honest, upfront pricing so you know exactly what to expect before we begin."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How long does a typical landscaping project take?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Timeline depends on the project scope. Simple mulching or trimming can often be completed in a day, while larger projects like hardscaping or full redesigns may take several days. We'll provide a clear timeline with your estimate."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you work on both residential and commercial properties?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We serve both homeowners and businesses throughout Macomb, Shelby Township, Chesterfield, and nearby areas. Every project—big or small—is completed with precision, clean workmanship, and professional care."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "When do I pay for landscaping services?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No final payment is due until the work is completed and approved. We want to ensure you're completely satisfied with the results before collecting payment."
+          }
+        }
+      ]
+    }
+    </script>
 {% endblock %}
 
 {% block body %}
@@ -113,6 +202,140 @@ permalink: 'services/landscaping/'
     </div>
 </section>
 
+<!-- ============================================ -->
+<!--                     FAQ                      -->
+<!-- ============================================ -->
+
+<section id="faq-1404">
+  <div class="cs-container">
+    <div class="cs-content">
+      <span class="cs-topper">FAQ</span>
+      <h2 class="cs-title">Frequently Asked Questions</h2>
+    </div>
+    <div class="cs-faq-group">
+      <!-- FAQ Item 1 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What landscaping services do you offer in Macomb, MI?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We offer mulching, hardscaping and rock installation, tree and shrub trimming, tree removal and stump grinding, sod installation and lawn replacement, and sprinkler system installation and maintenance. We handle everything from simple refreshes to full outdoor makeovers.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 2 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Why should I mulch my landscape beds?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Mulching is one of the fastest and most affordable ways to improve your property's appearance. Premium mulch reduces weeds, retains moisture in soil, and creates a crisp, polished look. We offer a variety of colors and materials to match your aesthetic.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 3 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What is hardscaping and what does it include?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Hardscaping includes decorative stone borders, rock beds, walkways, and retaining walls. These durable features elevate your landscape while reducing long-term maintenance needs. We design and install hardscapes that complement your property.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 4 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you remove trees and grind stumps?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. Our team safely removes hazardous or unwanted trees and grinds stumps below ground level, allowing you to reclaim your yard and prepare for new landscaping projects.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 5 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How does sod installation work?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Sod installation provides an instant lawn transformation. We install high-quality sod that's perfect for damaged lawns, new construction, or homeowners wanting a fast, healthy, green yard without waiting for seed to grow.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 6 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you install and service sprinkler systems?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We're one of the few landscaping companies in Macomb specializing in irrigation. We handle new sprinkler installs, repairs, start-ups, and winter shut-downs. Systems winterized by our team are covered against freeze damage.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 7 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How much do landscaping services cost?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Pricing varies based on project size, materials, and scope of work. We provide fast, free estimates with honest, upfront pricing so you know exactly what to expect before we begin.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 8 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How long does a typical landscaping project take?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Timeline depends on the project scope. Simple mulching or trimming can often be completed in a day, while larger projects like hardscaping or full redesigns may take several days. We'll provide a clear timeline with your estimate.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 9 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you work on both residential and commercial properties?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We serve both homeowners and businesses throughout Macomb, Shelby Township, Chesterfield, and nearby areas. Every project—big or small—is completed with precision, clean workmanship, and professional care.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 10 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">When do I pay for landscaping services?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            No final payment is due until the work is completed and approved. We want to ensure you're completely satisfied with the results before collecting payment.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 {% include 'components/cta.html' %}
 
