--- a/src/content/pages/services/weeding.html
+++ b/src/content/pages/services/weeding.html
@@ -9,6 +9,95 @@ permalink: 'services/weed-control/'
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/services.css">
+    <script defer src="/assets/js/faq.js"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What weed control services do you offer?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We offer both monthly weed maintenance programs and one-time weed cleanup services. Our monthly program includes regular visits for consistent control, hand-pulling and targeted spraying, and optional pre-emergent treatment to prevent new growth."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What's the difference between monthly and one-time weed control?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Monthly weed maintenance provides ongoing control with regular visits throughout the season to stay ahead of weed growth. One-time cleanup is perfect for properties needing a quick refresh before listing, an event, or the start of a maintenance plan."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Where do you remove weeds from?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We service mulch beds, sidewalks, driveways, pavement cracks, landscape bed edges, unused flowerbeds, and any other areas where weeds try to take over. We provide thorough removal in hard-to-reach areas as well."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are your weed control products safe?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We use environmentally safe weed control products that protect your lawn and landscaping while effectively eliminating problem areas. Our methods are safe for both your property and the surrounding environment."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer pre-emergent weed treatment?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We offer optional pre-emergent treatment that prevents new weed growth before it starts. This proactive approach helps reduce the number of weeds that need to be pulled or sprayed later in the season."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How do you remove weeds - pulling or spraying?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We use a combination of both hand-pulling and targeted spraying for complete removal. Hand-pulling is effective for removing roots, while targeted spraying helps eliminate weeds in areas that are difficult to access or likely to regrow."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Why are weeds a problem for my landscape?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Weeds don't just make your property look unkempt—they steal nutrients and moisture from your plants and grass. They compete with desirable plants for resources and can quickly spread if not controlled, taking over landscape beds and lawn areas."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How much does weed control cost in Macomb, MI?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Pricing varies based on property size, weed density, and whether you choose monthly service or one-time cleanup. We offer affordable pricing and provide free estimates so you know exactly what to expect."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I get just a one-time weed cleanup?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We offer both seasonal contracts and one-time service options. One-time cleanup is ideal for quick property refreshes before events, home listings, or as the starting point for ongoing maintenance."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What areas do you serve for weed control?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We serve Macomb, Shelby Township, Chesterfield, and surrounding areas in Southeast Michigan. Our professional, insured crew has years of local experience keeping properties weed-free."
+          }
+        }
+      ]
+    }
+    </script>
 {% endblock %}
 
 {% block body %}
@@ -86,9 +175,144 @@ permalink: 'services/weed-control/'
 
       <h2>Request Your Free Weed Control Estimate</h2>
       <p>
-        Take control of your landscape today — contact <strong>Macomb Landscaping Services</strong> for professional weed control and monthly maintenance plans in Macomb and surrounding areas. 
+        Take control of your landscape today — contact <strong>Macomb Landscaping Services</strong> for professional weed control and monthly maintenance plans in Macomb and surrounding areas.
         Call or text us for a free estimate.
       </p>
+    </div>
+  </div>
+</section>
+
+<!-- ============================================ -->
+<!--                     FAQ                      -->
+<!-- ============================================ -->
+
+<section id="faq-1404">
+  <div class="cs-container">
+    <div class="cs-content">
+      <span class="cs-topper">FAQ</span>
+      <h2 class="cs-title">Frequently Asked Questions</h2>
+    </div>
+    <div class="cs-faq-group">
+      <!-- FAQ Item 1 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What weed control services do you offer?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We offer both monthly weed maintenance programs and one-time weed cleanup services. Our monthly program includes regular visits for consistent control, hand-pulling and targeted spraying, and optional pre-emergent treatment to prevent new growth.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 2 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What's the difference between monthly and one-time weed control?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Monthly weed maintenance provides ongoing control with regular visits throughout the season to stay ahead of weed growth. One-time cleanup is perfect for properties needing a quick refresh before listing, an event, or the start of a maintenance plan.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 3 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Where do you remove weeds from?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We service mulch beds, sidewalks, driveways, pavement cracks, landscape bed edges, unused flowerbeds, and any other areas where weeds try to take over. We provide thorough removal in hard-to-reach areas as well.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 4 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Are your weed control products safe?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We use environmentally safe weed control products that protect your lawn and landscaping while effectively eliminating problem areas. Our methods are safe for both your property and the surrounding environment.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 5 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you offer pre-emergent weed treatment?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We offer optional pre-emergent treatment that prevents new weed growth before it starts. This proactive approach helps reduce the number of weeds that need to be pulled or sprayed later in the season.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 6 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How do you remove weeds - pulling or spraying?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We use a combination of both hand-pulling and targeted spraying for complete removal. Hand-pulling is effective for removing roots, while targeted spraying helps eliminate weeds in areas that are difficult to access or likely to regrow.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 7 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Why are weeds a problem for my landscape?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Weeds don't just make your property look unkempt—they steal nutrients and moisture from your plants and grass. They compete with desirable plants for resources and can quickly spread if not controlled, taking over landscape beds and lawn areas.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 8 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How much does weed control cost in Macomb, MI?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Pricing varies based on property size, weed density, and whether you choose monthly service or one-time cleanup. We offer affordable pricing and provide free estimates so you know exactly what to expect.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 9 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Can I get just a one-time weed cleanup?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We offer both seasonal contracts and one-time service options. One-time cleanup is ideal for quick property refreshes before events, home listings, or as the starting point for ongoing maintenance.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 10 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What areas do you serve for weed control?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We serve Macomb, Shelby Township, Chesterfield, and surrounding areas in Southeast Michigan. Our professional, insured crew has years of local experience keeping properties weed-free.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
