update perma links with leading slash

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -2,7 +2,7 @@
 title: 'About'
 description: 'Learn about Macomb Landscaping Services - your all-in-one property maintenance solution. 10+ years serving Macomb County with fully insured, quality service. Free estimates!'
 preloadImg: ''
-permalink: 'about/'
+permalink: '/about/'
 eleventyNavigation:
     key: About Us
     order: 200
