--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -2,7 +2,7 @@
 title: 'Contact'
 description: 'Contact Macomb Landscaping Services for professional lawn care, landscaping, and property maintenance in Macomb County and surrounding areas. Call 586-842-7297 for a free estimate.'
 preloadImg: ''
-permalink: 'contact/'
+permalink: '/contact/'
 ---
 
 {% extends "layouts/base.html" %}
