--- a/src/content/pages/services/irrigation.html
+++ b/src/content/pages/services/irrigation.html
@@ -2,7 +2,7 @@
 title: 'Irrigation & Sprinkler Services in Macomb MI'
 description: 'Professional irrigation and sprinkler system services in Macomb, Shelby, and Chesterfield. We handle start-ups, shut-downs, repairs, and backflow testing — with full freeze damage warranties.'
 preloadImg: ''
-permalink: 'services/irrigation/'
+permalink: '/services/irrigation/'
 ---
 
 {% extends "layouts/base.html" %}
