--- a/src/content/pages/services/lawncare.html
+++ b/src/content/pages/services/lawncare.html
@@ -2,7 +2,7 @@
 title: 'Lawn Care serviced in Macomb MI'
 description: 'Professional lawn care services in Macomb, Shelby, and Chesterfield. We provide mulching, hardscapes, tree trimming, sod replacement, and more — with free estimates and guaranteed quality.'
 preloadImg: ''
-permalink: 'services/lawncare/'
+permalink: '/services/lawncare/'
 ---
 
 {% extends "layouts/base.html" %}
