--- a/src/content/pages/services/weeding.html
+++ b/src/content/pages/services/weeding.html
@@ -2,7 +2,7 @@
 title: 'Weed Control Services in Macomb MI'
 description: 'Seasonal and monthly weed control in Macomb, Shelby, and Chesterfield. Keep your mulch beds, pavement, and flowerbeds clean with professional weed pulling and spraying services.'
 preloadImg: ''
-permalink: 'services/weed-control/'
+permalink: '/services/weed-control/'
 ---
 
 {% extends "layouts/base.html" %}
