--- a/src/content/pages/services/lawnscaping.html
+++ b/src/content/pages/services/lawnscaping.html
@@ -3,7 +3,7 @@ title: 'Landscaping Services in Macomb MI | Local Landscaping Company'
 description: 'Professional landscaping in Macomb MI. Mulching, hardscapes, sod, tree trimming, and more. Local landscaping company with fast free estimates.
 '
 preloadImg: ''
-permalink: 'services/landscaping/'
+permalink: '/services/landscaping/'
 ---
 
 {% extends "layouts/base.html" %}
