--- a/src/content/pages/services/snow-removal.html
+++ b/src/content/pages/services/snow-removal.html
@@ -2,7 +2,7 @@
 title: 'Snow Removal in Macomb MI | Residential & Commercial Plowing & Deicing'
 description: 'Reliable snow removal in Macomb, Shelby Township, and Chesterfield. We offer residential and commercial plowing, shoveling, and deicing with 24/7 storm monitoring. Free quotes and seasonal contracts available.'
 preloadImg: ''
-permalink: 'services/snow-removal/'
+permalink: '/services/snow-removal/'
 ---
 
 {% extends "layouts/base.html" %}
