fix weird thing

--- a/src/content/pages/services/lawnscaping.html
+++ b/src/content/pages/services/lawnscaping.html
@@ -1,7 +1,6 @@
 ---
 title: 'Landscaping Services in Macomb MI | Local Landscaping Company'
-description: 'Professional landscaping in Macomb MI. Mulching, hardscapes, sod, tree trimming, and more. Local landscaping company with fast free estimates.
-'
+description: 'Professional landscaping in Macomb MI. Mulching, hardscapes, sod, tree trimming, and more. Local landscaping company with fast free estimates.'
 preloadImg: ''
 permalink: '/services/landscaping/'
 ---
