--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -3,6 +3,7 @@ title: 'Blog'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'blog/'
+eleventyExcludeFromCollections: true
 eleventyNavigation:
     key: Blog
     order: 500
