update page titles and descriptions for improved SEO and clarity across the site

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,6 +1,6 @@
 ---
-title: 'About'
-description: 'Learn about Macomb Landscaping Services - your all-in-one property maintenance solution. 10+ years serving Macomb County with fully insured, quality service. Free estimates!'
+title: 'About Us - Trusted Macomb Landscapers | 10+ Years Experience'
+description: 'Family-owned landscaping company serving Macomb County for 10+ years. Fully insured, reliable service. See why hundreds of homeowners trust us with their properties.'
 preloadImg: ''
 permalink: '/about/'
 eleventyNavigation:
