--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,6 +1,6 @@
 ---
-title: 'Contact'
-description: 'Contact Macomb Landscaping Services for professional lawn care, landscaping, and property maintenance in Macomb County and surrounding areas. Call 586-842-7297 for a free estimate.'
+title: 'Get Your Free Quote Today | Call 586-842-7297'
+description: 'Request your FREE landscaping estimate in minutes! Call 586-842-7297 or fill out our quick form. Fast response, no obligation. Serving Macomb, Shelby Township & Warren.'
 preloadImg: ''
 permalink: '/contact/'
 ---
