--- a/src/content/pages/services/guttercleaning.html
+++ b/src/content/pages/services/guttercleaning.html
@@ -1,6 +1,6 @@
 ---
-title: 'Gutter Cleaning Services in Macomb MI'
-description: 'Professional gutter cleaning in Macomb, Shelby Township, and Chesterfield. Prevent water damage with twice-yearly gutter and downspout cleaning, flushing, and inspections.'
+title: 'Gutter Cleaning Macomb MI | Prevent Water Damage'
+description: 'Protect your home with professional gutter cleaning in Macomb. Full cleaning, flushing & inspection. Prevent costly water damage. Book your service today!'
 preloadImg: ''
 permalink: '/services/gutter-cleaning/'
 ---
