--- a/src/content/pages/services/index.html
+++ b/src/content/pages/services/index.html
@@ -1,6 +1,6 @@
 ---
-title: 'Landscaping & Lawn Care Services in Macomb MI | Full Service Property Maintenance'
-description: 'Professional landscaping, lawn care, irrigation, gutter cleaning, weed control & snow removal services in Macomb County MI. Residential & commercial. Free estimates!'
+title: 'Our Services | Macomb Landscaping | Lawn Care to Snow Removal'
+description: 'Full-service property maintenance in Macomb County. Lawn care, landscaping, irrigation, gutter cleaning, weed control & snow removal. Fully insured. FREE estimates!'
 preloadImg: ''
 permalink: '/services/'
 eleventyNavigation:
