--- a/src/content/pages/services/irrigation.html
+++ b/src/content/pages/services/irrigation.html
@@ -1,6 +1,6 @@
 ---
-title: 'Irrigation & Sprinkler Services in Macomb MI'
-description: 'Professional irrigation and sprinkler system services in Macomb, Shelby, and Chesterfield. We handle start-ups, shut-downs, repairs, and backflow testing — with full freeze damage warranties.'
+title: 'Sprinkler System Services Macomb MI | Start-ups & Repairs'
+description: 'Sprinkler start-ups, winterization & repairs in Macomb County. Backflow testing certified. Full freeze damage warranty included. Call for your FREE estimate!'
 preloadImg: ''
 permalink: '/services/irrigation/'
 ---
