--- a/src/content/pages/services/lawncare.html
+++ b/src/content/pages/services/lawncare.html
@@ -1,6 +1,6 @@
 ---
-title: 'Lawn Care serviced in Macomb MI'
-description: 'Professional lawn care services in Macomb, Shelby, and Chesterfield. We provide mulching, hardscapes, tree trimming, sod replacement, and more — with free estimates and guaranteed quality.'
+title: 'Lawn Care Services Macomb MI | Weekly Mowing'
+description: 'Professional lawn mowing, edging & trimming in Macomb County. Weekly & biweekly plans available. Fully insured, reliable service. Get your FREE estimate today!'
 preloadImg: ''
 permalink: '/services/lawncare/'
 ---
