--- a/src/content/pages/services/lawnscaping.html
+++ b/src/content/pages/services/lawnscaping.html
@@ -1,6 +1,6 @@
 ---
-title: 'Landscaping Services in Macomb MI | Local Landscaping Company'
-description: 'Professional landscaping in Macomb MI. Mulching, hardscapes, sod, tree trimming, and more. Local landscaping company with fast free estimates.'
+title: 'Landscaping Services Macomb MI | Mulch, Sod & Hardscapes'
+description: 'Transform your yard with professional landscaping in Macomb. Mulching, hardscapes, sod installation & tree trimming. Locally owned. FREE estimates - call today!'
 preloadImg: ''
 permalink: '/services/landscaping/'
 ---
