--- a/src/content/pages/services/snow-removal.html
+++ b/src/content/pages/services/snow-removal.html
@@ -1,6 +1,6 @@
 ---
-title: 'Snow Removal in Macomb MI | Residential & Commercial Plowing & Deicing'
-description: 'Reliable snow removal in Macomb, Shelby Township, and Chesterfield. We offer residential and commercial plowing, shoveling, and deicing with 24/7 storm monitoring. Free quotes and seasonal contracts available.'
+title: 'Snow Removal Macomb MI | 24/7 Plowing & Salting'
+description: 'Fast, reliable snow plowing in Macomb County. Residential & commercial. 24/7 storm response, salting & shoveling. Seasonal contracts available. Get your FREE quote!'
 preloadImg: ''
 permalink: '/services/snow-removal/'
 ---
