--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
-title: 'Macomb MI Landscaping & Lawn Care | Professional Landscapers Near You'
-description: 'Professional landscaping, lawn care, irrigation & snow removal serving Macomb County, Shelby Township, Warren & surrounding areas. Get your free quote!'
+title: '#1 Landscaping Company in Macomb MI | Free Estimates'
+description: 'Trusted landscaping & lawn care in Macomb County. Lawn mowing, snow removal, irrigation & more. Fully insured, locally owned. Call 586-842-7297 for a FREE quote today!'
 preloadImg: '/assets/images/hero-background-1200.webp'
 permalink: '/'
 eleventyNavigation:
