--- a/src/content/pages/services/weeding.html
+++ b/src/content/pages/services/weeding.html
@@ -1,6 +1,6 @@
 ---
-title: 'Weed Control Services in Macomb MI'
-description: 'Seasonal and monthly weed control in Macomb, Shelby, and Chesterfield. Keep your mulch beds, pavement, and flowerbeds clean with professional weed pulling and spraying services.'
+title: 'Weed Control Services Macomb MI | Monthly Plans Available'
+description: 'Keep your property weed-free with professional weed control in Macomb. Monthly contracts available for mulch beds & pavement. Affordable plans - get a FREE quote!'
 preloadImg: ''
 permalink: '/services/weed-control/'
 ---
